# math-animation-studio

./: .gitignore  README.md  pyproject.toml
docs/: storyboard-dsl.md  template-chapter-catalog.md  visual-component-catalog.md
examples/: gradient_descent_input.md
examples/formulas/: attention.md  cross_entropy.md  gradient_descent.md
src/math_animation_studio/: __init__.py  cli.py  config.py  safe_presets.py  timing.py
src/math_animation_studio/artifacts/: __init__.py  manager.py
src/math_animation_studio/generator/: __init__.py  manim_generator.py
src/math_animation_studio/knowledge/: animation_patterns.yaml  concept_taxonomy.yaml  prerequisite_templates.yaml  template_chapters.yaml  visual_components.yaml
src/math_animation_studio/llm/: __init__.py  client.py  prompts.py
src/math_animation_studio/planner/: __init__.py  concept_planner.py
src/math_animation_studio/renderer/: __init__.py  manim_renderer.py
src/math_animation_studio/samples/: __init__.py  (+1 more)
tests/: test_animation_family_coercion.py  test_artifact_manager.py  test_cli.py  test_explanation_plan_schema.py  test_formula_analysis_schema.py  test_llm_client.py  test_llm_formula_planner.py  test_llm_voiceover_script_writer.py  test_manim_generator.py  test_manim_renderer.py  test_pattern_selector.py  test_plan_command_no_llm.py  test_prompt_generation.py  test_safe_presets.py  test_storyboard_adapter.py  test_storyboard_dsl.py  test_storyboard_schema.py  test_template_catalog.py  test_timeline_sync.py  test_visual_component_catalog.py  test_voiceover_script_writer.py
(+45 files in other folders)
